# sidestage

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  GEMINI.md  README.md  agent-project.json  justfile  nx.json  package-lock.json  package.json  project.json  pydoc-markdown.yml  pyproject.toml  pyrightconfig.json
.claude/: CLAUDE.md  settings.json
.claude/agents/: coder.md  specwriter.md  testwriter.md
.claude/commands/: specwrite.md
.claude/memory/: MEMORY.md  feedback_dm_vs_privileged.md  feedback_specs_no_content.md  feedback_use_worktrees.md
.claude/plans/: sleepy-coalescing-russell.md
.gemini/: settings.json
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: agno.md  general.md  python.md
configs/: sidestage.yaml
configs/dragons_lair/: campaign.yaml
data/characters/: narrator.md
data/prompts/: default_npc.txt  system_agent.txt  unseen_npc.txt
docs/: api.md  architecture.md  dev_instance.md  features.md  http-api.md  observability.md  ui_structure.md  user_journeys.md
docs/api/: .source_hash  index.md  sidestage.actors.md  sidestage.agent.md  sidestage.bus.md  sidestage.campaign.md  sidestage.character.md  sidestage.config.md  sidestage.entities.md  sidestage.event.md  sidestage.graph.client.md  sidestage.graph.entities.md  sidestage.graph.errors.md  sidestage.graph.md  sidestage.graph.queries.md  sidestage.graph.relationships.md  sidestage.graph.schema.md  sidestage.health.md  sidestage.logging.md  sidestage.mcp_bridge.md  sidestage.memory.context.md  sidestage.memory.embeddings.md  sidestage.memory.md  sidestage.memory.models.md  sidestage.memory.store.md  sidestage.memory.tools.md  sidestage.migration.exporter.md  sidestage.migration.importer.md  sidestage.migration.md  sidestage.migration.models.md  sidestage.migration.parser.md  sidestage.migration.serialization.md  sidestage.migration.validator.md  sidestage.models.md  sidestage.orchestrator.md  sidestage.request_context.md  sidestage.request_context_middleware.md  sidestage.scene.md  sidestage.schemas.md  sidestage.server.md  (+7 more)
frontend/: index.html  package-lock.json  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.test.tsx  App.tsx  AppContext.test.tsx  AppContext.tsx  ChatWidget.test.tsx  ChatWidget.tsx  EntityBrowser.test.tsx  EntityBrowser.tsx  Layout.test.tsx  Layout.tsx  SpanDetail.tsx  TraceTimeline.tsx  TraceViewerPage.tsx  canary.test.ts  entityRegistry.test.ts  entityRegistry.ts  main.tsx  test-helpers.test.tsx  test-helpers.tsx  test-setup.ts  types.ts  types_ext.ts
instances/: dev.yaml
planning/: deep_project_interview.md  deep_project_session.json  project-manifest.md  requirements.md
planning/01-falkordb-foundation/: claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
planning/02-memory-and-embedding/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
planning/03-migration-and-sync/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
planning/04-tracing/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
planning/05-actors/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
planning/06-frontend-testing/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
planning/07-scene-membership/: plan.md  research.md  spec.md
planning/08-nx-monorepo/: plan.md  research.md  spec.md
scripts/: generate_api_docs.py  run-dev.sh  seed_entities.py
sidestage.dev/: .gitignore  config.yml  run.sh  sidestage.pid
sidestage/llm_profiles/: localhost.yaml
specs/: actor.md  actors.md  architecture.md  backend.md  campaign.md  character.md  chat-flow.md  debugging.md  entity-model.md  entity.md  events.md  frontend-layout.md  frontend.md  instance-config.md  interface.md  llm-profiles.md  message.md  persistence.md  rest-api.md  runner.md  scene.md  server.md  sidestage.md  spec.md  speclint.md  styleguide.md  testing.md
specs/design/: character_bubble.html  character_panel.html  main.html  message_input.html  message_item.html  nav.js  scene_bubble.html  scene_panel.html  state_disconnected.html  state_loading.html  state_unknown_entity.html  workspace.html
specs/implementation/: agent.md  api.md  campaign.md  entities.md  memory.md  migration.md  observability.md  scenes.md  ui.md
src/sidestage/: action.py  actor.py  actor_test.py  actors.py  agent.py  app.py  app_test.py  bus.py  campaign.py  campaign_test.py  character.py  character_test.py  chat_service.py  chat_service_test.py  config.py  config_loader.py  config_loader_test.py  conftest.py  entities.py  entity.py  entity_test.py  event.py  events.py  falkor_client.py  falkor_factory.py  health.py  ids.py  ids_test.py  instance_config.py  instance_config_test.py  llm_client.py  llm_client_test.py  llm_factory.py  llm_profile.py  llm_profile_test.py  logging.py  main.py  mcp_bridge.py  message.py  message_repository.py  (+25 more)
src/speclint/: cli.py  extract.py  model.py  speclint_test.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_agent_init.py  test_co_author_agent.py  test_integration.py  test_pyright.py  test_storage.py
tests/devserver/: conftest.py  helpers.py  test_chat_llm.py  test_entities.py  test_import_export.py  test_observability.py  test_scenes.py
tests/e2e/: conftest.py  project.json  test_campaign_operations.py  test_canary.py  test_chat_flow.py  test_cuj_hello.py  test_entity_management.py  test_npc_actor_live.py  test_realtime_sync.py  test_scene_navigation.py
(+422 files in other folders)
