[project]
name = "sidestage"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "litellm",
    "python-multipart",
    "pydantic-settings",
    "pyyaml",
    "python-frontmatter",
]

[project.scripts]
sidestage = "sidestage.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sidestage"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "httpx",
    "pydoc-markdown",
]

[tool.pytest.ini_options]
python_files = "*_test.py test_*.py"
testpaths = ["src/sidestage", "tests"]
asyncio_mode = "auto"
# Filter third-party deprecation noise from uvicorn[standard]'s legacy
# websockets path. We don't use websockets directly; uvicorn pulls them
# in transitively for protocol support and warns until they migrate to
# the new API. Not actionable in our code; surgical filter beats a
# blanket suppression.
# Fail on any unhandled warning. Suite must stay quiet; new warnings
# either get fixed or earn a surgical ignore rule.
filterwarnings = [
    "error",
    "ignore:websockets.legacy is deprecated.*:DeprecationWarning",
    "ignore:websockets\\.server\\.WebSocketServerProtocol is deprecated.*:DeprecationWarning",
]
# A unit test that takes longer than 2s is almost certainly hung — fail
# fast so the wedge is visible. Integration / eval tests can override
# per-test via `@pytest.mark.timeout(N)`.
timeout = 2
timeout_method = "signal"
markers = [
    "integration: in-process multi-module flows; slower than unit tests",
    "e2e: real uvicorn + httpx over TCP; exercises the API boundary",
    "eval: behavioral evals; opt-in (require EVAL=1)",
]
